--- a/WebGL/Development/index.html
+++ b/WebGL/Development/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL.loader.js";
+      var loaderUrl = buildUrl + "/Development.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL.data",
-        frameworkUrl: buildUrl + "/WebGL.framework.js",
-        codeUrl: buildUrl + "/WebGL.wasm",
+        dataUrl: buildUrl + "/Development.data",
+        frameworkUrl: buildUrl + "/Development.framework.js",
+        codeUrl: buildUrl + "/Development.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Paxy Games Inc.",
         productName: "The Drive",
